--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 RUN dnf install nginx -y
 RUN rm -rf /usr/share/nginx/html/index.html
-ADD https://github.com/daws-84s/concepts/blob/main/elk.png /usr/share/nginx/html/index.html
+ADD https://github.com/daws-84s/concepts/blob/main/student.yaml /usr/share/nginx/html/index.html
 RUN chmod +r /usr/share/nginx/html/index.html
 CMD ["nginx", "-g", "daemon off;"]
