--- a/ENV/dockerfile
+++ b/ENV/dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:9
 ENV   COURSE="Devops" \
       TRAINER="Sivalumar" \
-      DURATION="120hrs"- \
+      DURATION="120hrs"
 CMD ["sleep" ,"1000"]
