--- a/ENTRYPOINT/dockerfile
+++ b/ENTRYPOINT/dockerfile
@@ -1,3 +1,3 @@
 FROM almalinux:9
-CMD ["ping" , "google.com"]
-#RUN dnf install nginx -y
+#CMD ["ping" , "google.com"]
+ENTRYPOINT ["ping" , "google.com"]
