--- a/USER/Dockerfile
+++ b/USER/Dockerfile
@@ -1,6 +1,6 @@
 FROM almalinux:9
 #CMD ["ping" , "google.com"]
-RUN dnf install git -yaml
+RUN dnf install git -y
 RUN useradd SivaKumar
 
 USER SivaKumar
