--- a/USER/Dockerfile
+++ b/USER/Dockerfile
@@ -1,8 +1,8 @@
 FROM almalinux:9
 #CMD ["ping" , "google.com"]
 RUN dnf install git -y
-RUN useradd SivaKumar
+RUN useradd sivakumar
 
-USER SivaKumar
+USER sivakumar
 CMD ["google.com"]
 ENTRYPOINT ["ping"]
