--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -1,4 +1,5 @@
-FROM almalinux:9
+ARG version
+FROM almalinux:${version:-9}
 ENV   COURSE="Devops" \
       TRAINER="Sivalumar"
  ARG     DURATION="120hrs"
