--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -3,5 +3,5 @@ FROM almalinux:${version:-9}
 ENV   COURSE="Devops" \
       TRAINER="Sivalumar"
  ARG     DURATION="120hrs"
- RUN echo "Hi ${COURSE}, ${DURATION} , ${TRAINER}"
+ RUN echo "Hi ${COURSE}, ${DURATION} , ${TRAINER} , ${version}"
 CMD ["sleep" ,"1000"]
