--- a/ARG/Dockerfile
+++ b/ARG/Dockerfile
@@ -3,6 +3,6 @@ FROM almalinux:${version:-9}
 ENV   COURSE="Devops" \
       TRAINER="Sivalumar"
  ARG     DURATION="120hrs"
- ENV DURATION="DURATION"
+ ENV DURATION=DURATION
  RUN echo "Hi ${COURSE}, ${DURATION} , ${TRAINER} , ${version}"
 CMD ["sleep" ,"1000"]
